Date Format Changes +1
-- Fix for positioning of Modal Header 'Close' Button
-- Placeholder changes for Datepickers
-- Screen Reader changes for Datepickers
-- Removal of HTML5 Date Pattern Validator
-- Foreign Application Filing Date Alert functioning with new Date Formats

--- a/post_reg_section8.html
+++ b/post_reg_section8.html
@@ -367,12 +367,12 @@
                                                                 </div>
                                                                 <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div> 
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="reason">Reason for nonuse:</label> 
@@ -425,12 +425,12 @@
                                                                 </div>
                                                                 <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy">
+                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div> 
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                         <label for="reason">Reason for nonuse:</label> 
@@ -533,12 +533,12 @@
                                                                         </div>
                                                                         <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div> 
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="reason">Reason for nonuse:</label> 
@@ -591,12 +591,12 @@
                                                                         </div>
                                                                         <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div> 
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
                                                                                 <label for="reason">Reason for nonuse:</label> 
