--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -751,8 +751,8 @@
                                             <input type="text" class="form-control" id="bar-membership-number" name="attorneyBarMembershipNumber" value="">
                                         </div>
                                         <div class="form-group form-group-md col-xs-12 col-md-4">
-                                            <label for="bar-membership-date">Date of admission<span class="sr-only">enter the date in the following format: m m / d d / y y y y</span></label>
-                                            <input type="text" class="form-control datepicker" id="bar-membership-date" name="attorneyBarAdmissionDate" value="" placeholder="mm/dd/yyyy" pattern="(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)\d\d">
+                                            <label for="bar-membership-date">Date of admission<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                            <input type="text" class="form-control datepicker" id="bar-membership-date" name="attorneyBarAdmissionDate" value="" placeholder="yyyy-mm-dd">
                                         </div>
                                     </div>
                                     <div class="form-group form-group-md upload">
