SOU Class/GS Change Req
-- Update to label positioning due to TEAs Tag update
-- Change Req as Demoed + added class to button so both classes function the same on 'Delete Class'
-- Application view typo correction
-- Application view remove un-needed script

--- a/application_view.html
+++ b/application_view.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="layout (template, menu)" lang="en" xml:lang="en">
+<html lang="en" xml:lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -156,7 +156,7 @@
                                                     <th scope="col" tabindex="0" colspan="1" id="required">Required Actions</th>
                                                 </tr>
                                                 <tr>
-                                                    <td tabindex="0" headers="upcoming" headers="required"><a href="#">Respond to Office Action</a></td>
+                                                    <td tabindex="0" headers="required"><a href="#">Respond to Office Action</a></td>
                                                 </tr>
                                                 <tr>
                                                     <th scope="col" tabindex="0" colspan="1" id="optional">Optional Actions</th>
@@ -602,7 +602,7 @@
         <!--<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<script type="application/javascript" src="js/lynnjqueryscript.js"></script>
-        <script type="application/javascript" src="js/tab_panels.js"></script>
+        <!--<script type="application/javascript" src="js/tab_panels.js"></script>-->
     <footer>
         <div class="container-fluid">
             <div class="row">
