--- a/statement_of_use.html
+++ b/statement_of_use.html
@@ -166,7 +166,7 @@
                                                                 <button type="button" class="btn btn-sm btn-success cancel" data-dismiss="modal">Cancel</button>
                                                             </div>
                                                             <div class="col-xs-6 btn-group">
-                                                                <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Yes, delete this class</button>
+                                                                <button type="button" class="btn btn-sm btn-success deleteclass" data-dismiss="modal">Yes, delete this class</button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -357,7 +357,7 @@
                                                                 <button type="button" class="btn btn-sm btn-success cancel" data-dismiss="modal">Cancel</button>
                                                             </div>
                                                             <div class="col-xs-6 btn-group">
-                                                                <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Yes, delete this class</button>
+                                                                <button type="button" class="btn btn-sm btn-success deleteclass" data-dismiss="modal">Yes, delete this class</button>
                                                             </div>
                                                         </div>
                                                     </div>
