--- a/landing_page.html
+++ b/landing_page.html
@@ -67,10 +67,10 @@
         </div>
         <div class="container-fluid alertmargin">
        		<div class="row">
-                <div class="col-xs-11 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
+                <div class="col-xs-11 col-sm-10 col-md-10 col-lg-11 alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
                   <div class="closepans" id="minholder">
                     <p id="mintext"></p>
-                    <button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
+                    <button type="button" class="close closegspanels" aria-label="close alert" id="alertbtn"><span aria-hidden="true" class="glyphicon glyphicon-remove"></span></button>
                   </div>
                 </div> 
             </div>   
@@ -81,7 +81,7 @@
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                           </div>
                           <div class="modal-body">
                             <form action="" method="post" >
