--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -237,7 +237,7 @@
                                               <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                                                     <h4 class="modal-title" id="certmodallabel">Certification Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
@@ -256,7 +256,7 @@
                                               <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                                                     <h4 class="modal-title" id="collectmodallabel">Collective Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
@@ -275,7 +275,7 @@
                                               <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                                                     <h4 class="modal-title" id="collectmemberlabel">Collective Membership Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
