--- a/user_profile.html
+++ b/user_profile.html
@@ -516,7 +516,7 @@
                                               	<div class="modal-dialog" role="document">
                                                 	<div class="modal-content">
                                                   		<div class="modal-header">
-                                                    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                                                     		<h4 class="modal-title" id="changemail">Change account email address</h4>
                                                   		</div>
                                                   		<div class="modal-body">
@@ -551,7 +551,7 @@
                                               	<div class="modal-dialog" role="document">
                                                 	<div class="modal-content">
                                                   		<div class="modal-header">
-                                                    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                                                     		<h4 class="modal-title" id="changemail">Change Security Questions</h4>
                                                   		</div>
                                                   		<div class="modal-body">
@@ -602,7 +602,7 @@
                                               	<div class="modal-dialog" role="document">
                                                 	<div class="modal-content">
                                                   		<div class="modal-header">
-                                                    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                                                     		<h4 class="modal-title" id="changemail">Change Account Password</h4>
                                                   		</div>
                                                   		<div class="modal-body">
