Basis Datepicker ID Fix
-- Fix for copying + pasting of duplicate IDs on Datpickers, local files

--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -335,7 +335,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md">
                                                                 <p class="weight600">Specify if you have a pending application, foreign registration, or both for this good/service.</p>
-                                                                <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basisone" onclick="return datelimit();">
+                                                                <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basisone">
                                                                 <label class="form-check-label form-check" for="pendingtwo_basisone"><span class="radio notspecial" id="pendtwo">Pending foreign application</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="foreigntwo" tabindex="0" id="foreigntwo_basisone" aria-labelledby="forregtwo">
                                                                 <label class="form-check-label form-check" for="foreigntwo_basisone"><span class="radio notspecial" id="forregtwo">Foreign registration</span></label>
@@ -477,8 +477,8 @@
                                                                 <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                             </div> 
                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                <label for="firstconnection-date" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
-                                                                <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
+                                                                <label for="firstconnection-date-two" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span><span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                <input type="text" class="form-control datepicker" id="firstconnection-date-two" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md individualspecimen" role="alert">
                                                                 <input class="form-check-input checkmark showspecimen" type="checkbox" value="specimeneight" tabindex="0" aria-labelledby="individualspecimen_2" id="">
@@ -513,7 +513,7 @@
                                                             </div>
                                                             <div class="col-xs-12 form-group form-group-md">
                                                                 <p class="weight600">Specify if you have a pending application, foreign registration, or both for this good/service.</p>
-                                                                <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basistwo" onclick="return datelimit();">
+                                                                <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basistwo">
                                                                 <label class="form-check-label form-check" for="pendingtwo_basistwo" id="pendtwo"><span class="radio notspecial">Pending foreign application</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="foreigntwo" tabindex="0" id="foreigntwo_basistwo" aria-labelledby="forregtwo">
                                                                 <label class="form-check-label form-check" for="foreigntwo_basistwo" id="forregtwo"><span class="radio notspecial">Foreign registration</span></label>
