UI Fixes (Some DPs, some FUs)
-- Fix for Foreign Registration Certificate File Upload (Label Text Replacement)
-- Fix for Foreign Registration Datepickers: duplicate IDs were replaced
-- Update for 40 instances of Datepicker screen reader text to y y y y - m m - d d

--- a/additional_information_ROA_optional.html
+++ b/additional_information_ROA_optional.html
@@ -435,11 +435,11 @@
                                                             <div class="form-group form-group-md">
                                                                 <div class="row">
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="otherformfirst" class="matchlabelheight">Provide date of first use in another form:<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <label for="otherformfirst" class="matchlabelheight">Provide date of first use in another form:<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                         <input type="text" class="form-control datepicker" id="otherformfirst" name="otherformfirst" placeholder="yyyy-mm-dd">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="otherformcommerce" id="getit" class="matchlabelheight">Provide date of first use in commerce in another form:<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <label for="otherformcommerce" id="getit" class="matchlabelheight">Provide date of first use in commerce in another form:<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                         <input type="text" class="form-control datepicker" id="otherformcommerce" name="otherformcommerce" placeholder="yyyy-mm-dd">
                                                                     </div>
                                                                 </div>
