--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -132,7 +132,6 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-      
     <div class="container-fluid">    
       <div class="row content" id="attorney">
         <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7" id="mainContent" tabindex="-1">
@@ -751,7 +750,7 @@
                                             <input type="text" class="form-control" id="bar-membership-number" name="attorneyBarMembershipNumber" value="">
                                         </div>
                                         <div class="form-group form-group-md col-xs-12 col-md-4">
-                                            <label for="bar-membership-date">Date of admission<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                            <label for="bar-membership-date">Date of admission<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                             <input type="text" class="form-control datepicker" id="bar-membership-date" name="attorneyBarAdmissionDate" value="" placeholder="yyyy-mm-dd">
                                         </div>
                                     </div>
