--- a/post_reg_section8.html
+++ b/post_reg_section8.html
@@ -367,11 +367,11 @@
                                                                 </div>
                                                                 <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                         <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div> 
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                         <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
@@ -425,11 +425,11 @@
                                                                 </div>
                                                                 <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                         <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div> 
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                        <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                         <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                     </div>
                                                                     <div class="col-xs-12 col-md-6 form-group form-group-md">
@@ -533,11 +533,11 @@
                                                                         </div>
                                                                         <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                                 <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div> 
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                                 <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
@@ -591,11 +591,11 @@
                                                                         </div>
                                                                         <div class="row form-group form-group-md nonuse" role="alert"><!--toggle 'yes' radio-->
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <label for="connection-date" class="matchlabelheighttwo">Date of last use<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                                 <input type="text" class="form-control datepicker" id="connection-date" name="connectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div> 
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: m m - d d - y y y y</span></label>
+                                                                                <label for="firstconnection-date" class="matchlabelheighttwo">Approximate date when use is expected to resume<span class="sr-only">enter the date in the following format: y y y y - m m - d d</span></label>
                                                                                 <input type="text" class="form-control datepicker" id="firstconnection-date" name="firstconnectiondate" value="" placeholder="yyyy-mm-dd">
                                                                             </div>
                                                                             <div class="col-xs-12 col-md-6 form-group form-group-md">
